# TP3animTemps

./: .gitignore  README.md
OpenGLTutorials/ogl-master/: CMakeLists.txt
OpenGLTutorials/ogl-master/common/: shader.cpp
OpenGLTutorials/ogl-master/tutorial08_basic_shading/: NOTES.md  Shader.cpp  Shader.h  StandardShading.fragmentshader  StandardShading.vertexshader  combine.frag  combine.vert  fbo.cpp  old.cpp  ref.cpp  shader.frag  shader.vert  silhouette.frag  silhouette.vert  silhouette2.bkp.frag  silhouette2.frag  silhouette2.vert  tst.cpp  tutorial08.cpp
OpenGLTutorials/ogl-master/tutorial08_basic_shading/cyril/: StandardShading.fragmentshader
cyril/: StandardShading.vertexshader  cube.fragmentshader  cube.vertexshader  tutorial08.cpp
tutorial08_basic_shading/: tutorial08.cpp
